# Azure-Kinect-Samples

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
azure-iot-edge-motion-detector/: CMakeLists.txt  Dockerfile.amd64  deployment.template.json  main.c  module.json
body-tracking-samples/: CMakeLists.txt  NuGet.Config  README.md
body-tracking-samples/camera_space_transform_sample/: CMakeLists.txt  README.md  camera_space_transform_sample.sln  camera_space_transform_sample.vcxproj  camera_space_transform_sample.vcxproj.filters  main.cpp  packages.config
body-tracking-samples/csharp_3d_viewer/: BodyColors.cs  Csharp_3d_viewer.csproj  Csharp_3d_viewer.sln  CylinderRenderer.cs  JointConnections.cs  PointCloud.cs  PointCloudRenderer.cs  Program.cs  README.md  Renderer.cs  Shaders.cs  SphereRenderer.cs  TriangleRenderer.cs  VertexRenderer.cs  VisualizerData.cs
body-tracking-samples/floor_detector_sample/: CMakeLists.txt  FloorDetector.cpp  FloorDetector.h  PointCloudGenerator.cpp  PointCloudGenerator.h  README.md  floor_detector_sample.sln  floor_detector_sample.vcxproj  floor_detector_sample.vcxproj.filters  main.cpp  packages.config
body-tracking-samples/jump_analysis_sample/: CMakeLists.txt  DigitalSignalProcessing.cpp  DigitalSignalProcessing.h  HandRaiseDetector.cpp  HandRaiseDetector.h  JumpEvaluator.cpp  JumpEvaluator.h  NuGet.Config  jump_analysis_sample.vcxproj  jump_analysis_sample.vcxproj.filters  main.cpp  packages.config
body-tracking-samples/offline_processor/: CMakeLists.txt  README.md  main.cpp  offline_processor.sln  offline_processor.vcxproj  offline_processor.vcxproj.filters  packages.config
body-tracking-samples/sample_helper_includes/: BodyTrackingHelpers.h  CMakeLists.txt  Utilities.h
body-tracking-samples/sample_helper_libs/: CMakeLists.txt
body-tracking-samples/sample_helper_libs/sample_shared_lib/: CMakeLists.txt  DigitalSignalProcessing.cpp  SampleMathTypes.h
body-tracking-samples/sample_helper_libs/window3d_wrapper_lib/: CMakeLists.txt  Window3dWrapper.h
body-tracking-samples/sample_helper_libs/window_controller_3d/: CMakeLists.txt  ColorObjectShaders.h  GlShaderDefs.h  Helpers.cpp  MonoObjectShaders.h  PointCloudRenderer.cpp  PointCloudRenderer.h  PointCloudShaders.h  README.md  ViewControl.cpp  ViewControl.h  Window3dWrapper.cpp  Window3dWrapper.h  WindowController3d.cpp  WindowController3d.h  linmath.h  packages.config  window_controller_3d.vcxproj  window_controller_3d.vcxproj.filters
body-tracking-samples/sample_helper_libs/window_controller_3d/glad/: glad.h
body-tracking-samples/sample_recordings/: test.mkv
body-tracking-samples/sample_unity_bodytracking/: MoveLibraryFiles.bat  MoveLibraryFilesSensorAndBodyUpdate.bat  MoveLibraryFilesSensorUpdate.bat  README.md  app.config  packages.config
body-tracking-samples/sample_unity_bodytracking/Assets/Animator/: BlankAnimator.controller
body-tracking-samples/sample_unity_bodytracking/Assets/Config/: ConfigLoader.cs  Configs.cs
body-tracking-samples/sample_unity_bodytracking/Assets/Materials/: GroundMaterial.mat  Hologram_Flicker_Blue.mat  Hologram_Flicker_Green.mat  Hologram_Flicker_Red.mat  Joint.mat  MonitoringAreaMaterial.mat  SkinPerson.mat  black.mat  blue.mat  geen.mat  lightBlue.mat  orange.mat  pink.mat  red.mat  targetMaterial.mat
body-tracking-samples/sample_unity_bodytracking/Assets/Model/: Bodymat 2.mat  Female_Adult_11.fbx
body-tracking-samples/sample_unity_bodytracking/Assets/Model/mat/: Bodymat 1.mat  Bottommat.mat  Hairmat.mat  Shoesmat.mat  Topmat.mat
body-tracking-samples/sample_unity_bodytracking/Assets/Prefab/: Female_Adult_11.prefab  Kinect4AzureTracker.prefab  jasper.prefab
body-tracking-samples/sample_unity_bodytracking/Assets/Scenes/: Kinect4AzureSampleScene.unity  PuppetMaster.unity
body-tracking-samples/sample_unity_bodytracking/Assets/Scripts/: BackgroundData.cs  BackgroundDataProvider.cs  Body.cs  Constants.cs  CustomColors.cs  PuppetAvatar.cs  SkeletalTrackingProvider.cs  TrackerHandler.cs  debugTransform.cs  main.cs
body-tracking-samples/sample_unity_bodytracking/Assets/Skeleton/: CameraFlipper.cs  Skeleton.cs  SkeletonPosition.cs  Smoother.cs
body-tracking-samples/sample_unity_bodytracking/Assets/StreamingAssets/: config.json
body-tracking-samples/sample_unity_bodytracking/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TimeManager.asset
body-tracking-samples/simple_3d_viewer/: CMakeLists.txt  README.md  main.cpp  packages.config  simple_3d_viewer.sln  simple_3d_viewer.vcxproj  simple_3d_viewer.vcxproj.filters
body-tracking-samples/simple_cpp_sample/: README.md  main.cpp  packages.config  simple_cpp_sample.sln  simple_cpp_sample.vcxproj
body-tracking-samples/simple_sample/: CMakeLists.txt  README.md  main.c  packages.config  simple_sample.sln  simple_sample.vcxproj  simple_sample.vcxproj.filters
opencv-kinfu-samples/: CMakeLists.txt  README.md  kinfu_example.sln  kinfu_example.vcxproj  main.cpp  packages.config
pipe-to-python-samples/: README.md  main.cpp  packages.config  pipeClientReadImages.py  pipe_streaming_example.sln  pipe_streaming_example.vcxproj
reactor2019/: README.md
reactor2019/faceapi/: AzureKinectFaceAPI.sln  README.md
reactor2019/multicam/: MultiDeviceCapturer.h  README.md  green_screen.sln  green_screen.vcxproj  main.cpp  transformation.h  util.h
streaming-pointcloud/: .gitignore  README.md
streaming-pointcloud/Mqtt visualizer/: Mqtt visualizer.sln  README.md
streaming-pointcloud/docs/: building.md  networking.md  setup.md  troubleshooting.md
streaming-pointcloud/examples/: README.md
streaming-pointcloud/kinect capture/: Eigen.MPL2  README.md  kinect capture.sln
streaming-pointcloud/merger/: README.md  merger.sln
streaming-service-container-samples/: .gitignore  README.md
streaming-service-container-samples/c-sharp/: FaceDetection.sln
streaming-service-container-samples/nodejs/: .gitignore  README.md  depth.html  examples.css  multiplex.html  package-lock.json  package.json  webpack.config.js
(+191 files in other folders)
